# tantalum

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: build-test.yml  check.yml
crates/tantalum_ast/src/: literals.rs  types.rs
crates/tantalum_ast_lowering/: Cargo.toml
crates/tantalum_ast_lowering/src/: prototypes.rs
crates/tantalum_ast_lowering/tests/: snapshots.rs
crates/tantalum_ast_lowering/tests/snapshots/: nested__basic_assertions.snap  snapshots__conditionals.snap  snapshots__hello_world.snap  snapshots__start.snap
crates/tantalum_codegen_llvm/: Cargo.toml
crates/tantalum_codegen_llvm/src/: lib.rs
crates/tantalum_codegen_llvm/tests/: basic.rs
crates/tantalum_hlir/: Cargo.toml
crates/tantalum_hlir/src/: expressions.rs  items.rs  lib.rs  literals.rs  statements.rs  traits.rs  types.rs
crates/tantalum_hlir/src/types/: scope.rs
crates/tantalum_hlir/src/variables/: scope.rs
crates/tantalum_lexer/: Cargo.toml
crates/tantalum_lexer/src/: lib.rs  token.rs  token_kind.rs
crates/tantalum_lexer/src/tests/: identifiers.rs  literals.rs  punctuation.rs
crates/tantalum_lexer/src/tests/literals/: character.rs
crates/tantalum_lexer/tests/: snapshots.rs
crates/tantalum_lexer/tests/snapshots/: snapshots__hello_world.snap
crates/tantalum_parser/: Cargo.toml
crates/tantalum_parser/src/: error.rs  expressions.rs  identifiers.rs  items.rs  lib.rs  paths.rs  statements.rs  tests.rs  types.rs  whitespace.rs
crates/tantalum_parser/src/expressions/: infix.rs  postfix.rs  prefix.rs  primary.rs  tests.rs
crates/tantalum_parser/src/items/: parameters.rs
crates/tantalum_parser/src/tests/: expression.rs  top_level.rs
crates/tantalum_parser/src/tests/snapshots/: tantalum_parser__tests__expression__AddressOf.snap  tantalum_parser__tests__expression__BinaryOperation__BitwiseAnd.snap  tantalum_parser__tests__expression__BinaryOperation__BitwiseOr.snap  tantalum_parser__tests__expression__BinaryOperation__Equality.snap  tantalum_parser__tests__expression__BinaryOperation__GreaterThanOrEqual.snap  tantalum_parser__tests__expression__BinaryOperation__ShiftLeft.snap  tantalum_parser__tests__expression__BinaryOperation__Subtraction.snap  tantalum_parser__tests__expression__BitwiseNegation.snap  tantalum_parser__tests__expression__Deref.snap  tantalum_parser__tests__expression__Negation.snap  tantalum_parser__tests__expression__multiplication_with_addition_rhs.snap  tantalum_parser__tests__expression__type_cast.snap  tantalum_parser__tests__expression__type_cast_with_binary_expression.snap  tantalum_parser__tests__statement__block_statement.snap  tantalum_parser__tests__statement__for_loop_statement.snap  tantalum_parser__tests__statement__if_else_statement.snap  tantalum_parser__tests__statement__if_statement.snap  tantalum_parser__tests__statement__let_statement_with_type.snap  tantalum_parser__tests__statement__return_statement_integer.snap  tantalum_parser__tests__statement__return_statement_no_expression.snap  tantalum_parser__tests__statement__while_statement.snap  tantalum_parser__tests__top_level__external_function_declaration.snap  tantalum_parser__tests__top_level__external_function_declaration_with_variadic.snap  tantalum_parser__tests__top_level__function_declaration.snap  tantalum_parser__tests__top_level__function_declaration_with_parameters.snap
crates/tantalum_parser/tests/snapshots/: snapshots__loops.snap
crates/tantalum_source/: Cargo.toml
crates/tantalum_source/src/: lib.rs
crates/tantalum_span/: Cargo.toml
crates/tantalum_span/src/: lib.rs
crates/tantalum_syntax/: Cargo.toml
crates/tantalum_syntax/src/: lib.rs
examples/: conditionals.ta  hello_world.ta  loops.ta
tantalum_ast/: Cargo.toml
tantalum_ast/src/: expressions.rs  items.rs  lib.rs  statements.rs
tantalum_ast_lowering/src/: functions.rs  lib.rs  prototypes.rs
tantalum_ast_lowering/tests/: nested.rs
tantalum_ast_lowering/tests/snapshots/: nested__basic_assertions.snap.new  snapshots__loops.snap
tantalum_codegen_llvm/: Cargo.toml
tantalum_hlir/: Cargo.toml
tantalum_hlir/src/: expressions.rs  functions.rs  inference.rs  items.rs  lib.rs  literals.rs  path.rs  scope.rs  statements.rs  traits.rs  types.rs  variables.rs
tantalum_lexer/: Cargo.toml
tantalum_lexer/src/: lib.rs  tests.rs  token.rs  token_kind.rs
tantalum_lexer/src/tests/: keywords.rs  operators.rs
tantalum_lexer/src/tests/literals/: float.rs  integer.rs  string.rs
tantalum_lexer/tests/snapshots/: snapshots__conditionals.snap  snapshots__hello_world.snap  snapshots__loops.snap  snapshots__start.snap
tantalum_parser/: Cargo.toml
tantalum_parser/src/: error.rs  expressions.rs  items.rs  lib.rs  literals.rs  statements.rs  tests.rs  top_level.rs  types.rs
tantalum_parser/src/tests/: expression.rs  statement.rs  top_level.rs
tantalum_parser/src/tests/snapshots/: tantalum_parser__tests__expression__AddressOf.snap  tantalum_parser__tests__expression__BinaryOperation__Addition.snap  tantalum_parser__tests__expression__BinaryOperation__BitwiseAnd.snap  tantalum_parser__tests__expression__BinaryOperation__BitwiseOr.snap  tantalum_parser__tests__expression__BinaryOperation__BitwiseXor.snap  tantalum_parser__tests__expression__BinaryOperation__Division.snap  tantalum_parser__tests__expression__BinaryOperation__Equality.snap  tantalum_parser__tests__expression__BinaryOperation__GreaterThan.snap  tantalum_parser__tests__expression__BinaryOperation__GreaterThanOrEqual.snap  tantalum_parser__tests__expression__BinaryOperation__LessThan.snap  tantalum_parser__tests__expression__BinaryOperation__LessThanOrEqual.snap  tantalum_parser__tests__expression__BinaryOperation__LogicalAnd.snap  tantalum_parser__tests__expression__BinaryOperation__LogicalOr.snap  tantalum_parser__tests__expression__BinaryOperation__Modulus.snap  (+34 more)
tantalum_parser/tests/: snapshots.rs
tantalum_parser/tests/snapshots/: snapshots__conditionals.snap  snapshots__hello_world.snap  snapshots__loops.snap  snapshots__start.snap
tantalum_span/src/: lib.rs
tests/: examples.rs
