[package]
name = "tantalum_hlir"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[lints]
workspace = true
