[package]
name = "tantalum_lexer"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tantalum_source = { path = "../tantalum_source" }
tantalum_syntax = { path = "../tantalum_syntax" }

[lints]
workspace = true
