[package]
name = "tantalum_parser"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tantalum_lexer = { path = "../tantalum_lexer" }
tantalum_source = { path = "../tantalum_source" }
tantalum_syntax = { path = "../tantalum_syntax" }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
